# gst_plugins_tsunami

./: Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  make_debian
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
debian/: changelog  control  copyright  mosami-gst-plugins-tsunami-breakpad.install  mosami-gst-plugins-tsunami-dev.install  mosami-gst-plugins-tsunami.install  rules
m4/: Makefile.in  ipp.m4  yuv.m4
src/: Makefile.am  Makefile.in  gsttsunami.c
src/bl_facedetector/: FaceDetect.cpp  FaceDetect.h  FaceDetectLib.h  Makefile  ReadMe.txt  SmoothingFilter.cpp  SmoothingFilter.h  common.h  gstfacedetector.c  gstfacedetector.h  history.cpp  history.h
src/blockanalysis/: gstblockanalysis.c  gstblockanalysis.h
src/facetracking/: facetracking_kernel.c  facetracking_kernel.h  gstfacetracker3.c  gstfacetracker3.h  kalmantracking.h
src/facetracking/haarwrapper/: bbox.h  haarwrapper.c  haarwrapper.h
src/ghostmapper/: gstghostmapper.c  gstghostmapper.h  test_facetracker_ghostmapper_vmix_play.sh
src/gstfacetracker/: camshift.cpp  camshift.h  colorbins.cpp  colorbins.h  defines.h  drawing.cpp  drawing.h  face.cpp  face.h  facedetection.cpp  facedetection.h  ftrack.cpp  ftrack.h  gstfacetracker.cpp  gstfacetracker.h  haarclass.cpp  haarclass.h  helper.cpp  helper.h  image.cpp  image.h  imagefeature.cpp  imagefeature.h  ippimage.cpp  ippimage.h  kalman.cpp  kalman.h  mtxcore.cpp  mtxcore.h
src/imgsrc/: gstimgsrc.c  gstimgsrc.h  imgsrc.c  imgsrc.h
src/ipp_h264/: gsth264enc.c  gsth264enc.h
src/objecttracker/: gstobjecttracker.cpp  gstobjecttracker.h
src/objecttracker/PredatorSrc/cvblobs/: BlobContour.h  BlobProperties.h  BlobResult.h  blob.h
src/objecttracker/PredatorSrc/mftracker/: bb_predict.cpp
src/objecttracker/PredatorSrc/tld/: Clustering.h  DetectionResult.h  DetectorCascade.h  ForegroundDetector.cpp  ForegroundDetector.h  MedianFlowTracker.cpp  NNClassifier.h  TLD.h
src/objecttracker/PredatorSrc/wrapper/: config.cpp  config.h  predator.cpp  predator.h  settings.cpp  settings.h  wrapper.cpp  wrapper.h
src/opencv/: grabcut_wrapper.cpp  grabcut_wrapper.hpp  gstalphamix.c  gstalphamix.h  gstcodebookfgbg.c  gstcodebookfgbg.h  gstcontours.c  gstcontours.h  gstdilate.c  gstdilate.h  gstdraweventbox.c  gstdraweventbox.h  gstemptyopencv.c  gstemptyopencv.h  gstemptyopencv_rgba.c  gstemptyopencv_rgba.h  gsterode.c  gsterode.h  gstgc.c  gstgc.h  gstgcs.c  gstgcs.h  gsthisteq.c  gsthisteq.h  gstmorphology.c  gstmorphology.h  gstpyrlk.c  gstpyrlk.h  gstskin.c  gstskin.h  gstsnakes.c  gstsnakes.h  gsttsm.c  gsttsm.h  opencv_functions.c  opencv_functions.h
src/pixelate/: gstpixelate.c  gstpixelate.h
src/retinex/: gstretinex.c  gstretinex.h  retinex.c  retinex.h
src/ssim/: gstssim2.c  gstssim2.h  ssim.c  ssim.h
src/templatematch/: gsttemplatematch.c  gsttemplatematch.h
src/vibe/: gstvibe.c  gstvibe.h  vibe.c  vibe.h
test/: test_alphamix.sh  test_bodytracker_vmix_play.sh  test_codebookfgbg.sh  test_compare_facetracker_predator.sh  test_compare_haar.sh  test_compare_tracker_skin.sh  test_compare_trackers.sh  test_contours.sh  test_draweventbox.sh  test_facedetector_play.sh  test_facetracker3_play.sh  test_facetracker_ghostmapper_vmix_play.sh  test_gc.sh  test_gcs.sh  test_histeq.sh  test_morph.sh  test_pyrlk.sh  test_resize_cutout_vmix.sh  test_skin_play.sh  test_snakes.sh  test_ssim2.sh  test_tsm.sh  test_vibe.sh  test_vmix_play.sh
